--- a/src/blog/templates/base.html
+++ b/src/blog/templates/base.html
@@ -35,6 +35,7 @@
         {% wagtailuserbar %}
 
         {% block content %}{% endblock %}
+        {% include "includes/footer.html" %}
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
