--- a/src/blog/templates/base.html
+++ b/src/blog/templates/base.html
@@ -26,6 +26,7 @@
         {# Global stylesheets #}
         <link rel="stylesheet" type="text/css" href="{% static 'css/blog.css' %}">
 
+
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
         {% endblock %}
@@ -33,12 +34,14 @@
 
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
+        {% include "includes/header.html" %}
 
         {% block content %}{% endblock %}
         {% include "includes/footer.html" %}
 
         {# Global javascript #}
         <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
+        <script src="https://kit.fontawesome.com/412f49eabe.js" crossorigin="anonymous"></script>
 
         {% block extra_js %}
         {# Override this in templates to add extra javascript #}
