--- a/src/blog/templates/includes/nav.html
+++ b/src/blog/templates/includes/nav.html
@@ -1,12 +1,12 @@
-{% load wagtailcore_tags navigation_tags %}
+{% load wagtailcore_tags navigation_tags wagtailimages_tags %}
 
 {% block nav %}
     <nav>
-        <p>
-            {% get_site_root as site_root %}
-            {% for menuitem in site_root.get_children.live.in_menu %}
+        {% get_site_root as site_root %}
+        {% for menuitem in site_root.get_children.live.in_menu %}
+            <p>
                 <a href="{% pageurl menuitem %}">{{ menuitem.title }}</a>
-            {% endfor %}
-        </p>
+            </p>
+        {% endfor %}
     </nav>
 {% endblock %}
