feat(front): Fix content styling

--- a/src/blog/static/css/blog.css
+++ b/src/blog/static/css/blog.css
@@ -98,5 +98,12 @@ footer {
 }
 
 .container {
+    margin: 0 1rem;
+    background-color: var(--dark-bg-color);
+}
+
+.content {
+    margin: 0 0.5rem;
+    padding: 0.5rem;
     background-color: var(--light-bg-color);
 }
