--- a/src/blog/static/css/blog.css
+++ b/src/blog/static/css/blog.css
@@ -111,6 +111,9 @@ footer {
     margin: 0 0.5rem;
     padding: 0.5rem;
     background-color: var(--light-bg-color);
+    display: flex;
+    flex-flow: column;
+    align-items: center;
 }
 
 /* Cards */
@@ -132,6 +135,7 @@ footer {
     background-color: var(--dark-bg-color);
     border-radius: 0.2rem;
     box-shadow: 0 0 0.5rem rgb(0 0 0 / 20%);
+    width: 95%;
 
     .card-head {
         padding: 0;
