--- a/src/blog/templates/content/category.html
+++ b/src/blog/templates/content/category.html
@@ -2,7 +2,7 @@
 {% load wagtailcore_tags wagtailimages_tags %}
 
 {% block content %}
-    <div class="vertical">
+    <div class="vertical" style="width: 95%">
     <div class="card">
         <div class="card-head">
         {% if page.logo %}
@@ -17,24 +17,54 @@
         {% endif %}
     </div>
 
-    {% if articles %}<h2 class="card">Latest articles:</h2>{% endif %}
     <div class="horizontal">
-    {% for article in articles %}
-        <div class="card">
-            <div class="card-head">
-                {% if article.logo %}
-                {% srcset_image page.logo fill-{400x64,600x64,800x64} sizes="(max-width: 500px) 400w, (max-width: 700px) 600w, (max-width: 900px) 800w" height="32px" width="100%" %}
-                {% endif %}
-                <h3><a href="{% pageurl article %}">{{ article.title }}</a></h3>
+    {% if articles %}
+        <div class="vertical" style="width: 65%">
+        <h2 class="card">Latest articles:</h2>
+        <div class="horizontal">
+        {% for article in articles %}
+            <div class="card">
+                <div class="card-head">
+                    {% if article.logo %}
+                    {% srcset_image article.logo fill-{400x64,600x64,800x64} sizes="(max-width: 500px) 400w, (max-width: 700px) 600w, (max-width: 900px) 800w" height="32px" width="100%" %}
+                    {% endif %}
+                    <h3><a href="{% pageurl article %}">{{ article.title }}</a></h3>
+                </div>
+                <div class="card-meta">
+                    Date: {{ article.first_published_at }} - Author: {{ article.owner }}
+                </div>
+                <div class="card-body">
+                    {{ article.summary }}
+                </div>
             </div>
-            <div class="card-meta">
-                Date: {{ article.first_published_at }} - Author: {{ article.author }}
-            </div>
-            <div class="card-body">
-                {{ article.introduction|richtext }}
-            </div>
+        {% endfor %}
         </div>
-    {% endfor %}
+        </div>
+    {% endif %}
+    {% if sub_categories %}
+        <div class="vertical">
+        <h2 class="card">Subcategories:</h2>
+        {% for sub_category, top3 in sub_categories %}
+            <div class="card">
+                <div class="card-head">
+                    {% if sub_category.logo %}
+                    {% srcset_image sub_category.logo fill-{400x64,600x64,800x64} sizes="(max-width: 500px) 400w, (max-width: 700px) 600w, (max-width: 900px) 800w" height="32px" width="100%" %}
+                    {% endif %}
+                    <h3><a href="{% pageurl sub_category %}">{{ sub_category }}</a></h3>
+                </div>
+                {% if top3 %}
+                <div class="card-body">
+                <ul>
+                {% for article in top3 %}
+                    <li><a href="{% pageurl article %}">{{ article.title }}</a></li>
+                {% endfor %}
+                </ul>
+                </div>
+                {% endif %}
+            </div>
+        {% endfor %}
+        </div>
+    {% endif %}
     </div>
     </div>
 {% endblock %}
