--- a/src/blog/templates/includes/footer.html
+++ b/src/blog/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<footer>
-    <p>Build with wagtail</p>
+<footer class="horizontal">
+    <p><a href="https://wagtail.org/">Build with wagtail</a></p>
     <p><a href="https://github.com/HanaPoulpe/blog" target="_blank">Source code</a></p>
 </footer>
