feat: Add github logo to footer

--- a/src/blog/templates/includes/footer.html
+++ b/src/blog/templates/includes/footer.html
@@ -1,4 +1,8 @@
+{% load static %}
 <footer class="horizontal">
     <p><a href="https://wagtail.org/">Build with wagtail</a></p>
-    <p><a href="https://github.com/HanaPoulpe/blog" target="_blank">Source code</a></p>
+    <p>
+        <img src="{% static 'images/github-mark-white.svg' %}" class="footer-logo" alt="github logo"/>
+        <a href="https://github.com/HanaPoulpe/blog" target="_blank">Source code</a>
+    </p>
 </footer>
