--- a/src/blog/static/css/blog.css
+++ b/src/blog/static/css/blog.css
@@ -40,6 +40,27 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--light-text-color);
 }
 
+footer {
+    padding: 0.1rem;
+    margin: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    background-color: var(--dark-bg-color);
+
+    p {
+        margin: 0.5rem 0.1rem 0.1rem;
+        padding: 0.1rem 0.5rem;
+        background-color: var(--light-bg-color);
+        vertical-align: center;
+    }
+
+    img {
+        object-fit: cover;
+        height: 1rem;
+    }
+}
+
 .site-banner {
     padding: 0;
 
@@ -84,21 +105,6 @@ nav {
         background-color: var(--light-bg-color);
         margin: 0.1rem;
         padding: 0.1rem 0.5rem;
-    }
-}
-
-footer {
-    padding: 0.1rem;
-    margin: 0;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    background-color: var(--dark-bg-color);
-
-    p {
-        margin: 0.5rem 0.1rem 0.1rem;
-        padding: 0.1rem 0.5rem;
-        background-color: var(--light-bg-color);
     }
 }
 
